--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && sass src/styles:src/styles --no-source-map",
+    "sass-compile": "sass src/styles:src/styles --no-source-map",
+    "build": "npm run sass-compile && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
