--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "sass-compile": "sass src/styles:src/styles --no-source-map",
-    "build": "npm install &npm run sass-compile && react-scripts build",
+    "build": "npm install && npm run sass-compile && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
